# rival-radar

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rival_radar_plan.md
.github/workflows/: ci.yml  deploy.yml
landing/: index.html
src/rival_radar/: __main__.py  api.py  config.py  database.py  graph.py  models.py  scheduler.py  state.py  tracing.py
src/rival_radar/nodes/: analyst.py  notifier.py  scraper.py  writer.py
tests/: test_analyst.py  test_auth.py  test_integration.py  test_notifier.py  test_scraper.py  test_tracing.py
