[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rival-radar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "aiohttp>=3.9",
    "feedparser>=6.0",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "slack-sdk>=3.27",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "langfuse>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rival-radar = "rival_radar.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rival_radar"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/rival_radar/api.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
disable_error_code = ["call-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
